# strez

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/csv/: basic.csv  full.csv
src/: csv.rs  input.rs  lang.rs  language.rs  lib.rs  main.rs  output.rs  platform.rs  portation.rs  quantity.rs  resource.rs  serialize.rs  settings.rs
src/cli/: cli-en.yml
src/format/: csv.rs  mod.rs
src/platform/: mod.rs
src/usage/: en.yml
