[package]
name = "strez"
version = "0.1.0"
description = "Convert strings to formats readable by the Android and iOS platforms."
authors = ["Seth Lopez <sethlopezme@users.noreply.github.com>"]
homepage = "https://github.com/sethlopezme/strez"
repository = "https://github.com/sethlopezme/strez"

[dependencies]
clap = { version = "2", features = ["yaml"] }
csv = "~0.14.7"
